<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/Es">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="209dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:background="#1ACCE2E0"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/texto_menu"
            android:textSize="52sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/desc_estado"
                            android:layout_width="448dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/descripcion_estado" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imagen_estado"
                            android:layout_width="104dp"
                            android:layout_height="45dp"
                            app:srcCompat="@drawable/casa" />

                        <Button
                            android:id="@+id/btn_estado"
                            android:layout_width="287dp"
                            android:layout_height="50dp"
                            android:text="@string/estado_btn" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/desc_temp"
                            android:layout_width="447dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/descripcion_temp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imagen_temp"
                            android:layout_width="104dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/temperatura" />

                        <Button
                            android:id="@+id/btn_temp"
                            android:layout_width="286dp"
                            android:layout_height="wrap_content"
                            android:text="@string/temp_btn" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:rotationY="0">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:translationX="0"
                android:translationY="0">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="392dp"
                        android:layout_height="71dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imagen_salida"
                            android:layout_width="104dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            app:srcCompat="@drawable/salida" />

                        <Button
                            android:id="@+id/btn_salir"
                            android:layout_width="112dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/salir" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </TableRow>

    </LinearLayout>

</LinearLayout>